2005-04-28  Julian Foad  <julianfoad@btopenworld.com>

 	* tests/foad1.sh: Remove Bash-specific syntax.

2005-04-27  Julian Foad  <julianfoad@btopenworld.com>

	Fix a bug reported by Elliott Hughes in patch #1834 whereby "grep -Fw"
	would miss matches after a non-word occurrence of the pattern.  Fix by
	Gordon Lack; tests based on reproduction recipes by Gordon Lack.

	* src/search.c (Fexecute): Fix the "match_words" case.
 	* tests/foad1.sh: Modify the test framework so that the "PATTERN"
	  argument is optional.  Add a regression test and a test for
	  a similar case that other proposed patches have got wrong.

	Add more tests, some initially failing.

 	* tests/foad1.sh: Add tests for "--color", most initially failing.
	* tests/fmbtest.sh: New file of tests for "grep -i" with multi-byte
	  chars, by Jakub Jelinek, from patch #3808: Red Hat's "tests" patch.
	  Initially, test #4 fails (in all three modes).
	* tests/Makefile.am: Include the new tests file "fmbtest.sh".

2005-04-12  Julian Foad  <julianfoad@btopenworld.com>

 	* tests/bre.tests: Enable a regression test for bug #9519.
 	* src/grep.c: Fix a seg-fault in "-o -i": patch #1939.
 	* tests/foad1.sh: New tests for "-o", initially all failing.
	* tests/Makefile.am: Include the new tests file "foad1.sh".
 	* tests/spencer2.sh: Be consistent with "spencer1.sh" in the
	  naming of associated files.
	* src/grep.c: Fix off-by-one error in prpending().
	  Patch #3840 by Claudio Fontana.
	* tests/foad1.sh: Add tests by Pavol Gono for patch #3840.
	  Some of them still fail, but no longer seg-fault due to that bug.

2005-04-11  Julian Foad  <julianfoad@btopenworld.com>

 	* doc/grep.texi, doc/grep.1: Document USG grep -s too.
	  Based on a patch by Paul Eggert; suggested by Keith Marshall.
	* src/dfa.c (lex): Fix bug #9519: "echo do^re | grep do^re" was
	  failing to find a match.

2005-03-09  Stepan Kasal  <kasal@ucw.cz>

	* src/search.c (EGexecute, Fexecute): Use xmalloc, not malloc.